<resources>
    <string name="app_name">JuegoLab</string>
    <!--<string name="app_name">Login Register</string>-->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="text_music">Music</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title" translatable="false">Android Tutorials Hub</string>
    <string name="text_menu">Menu</string>
    <string name="text_off">Off</string>
    <string name="text_on">On</string>
    <string name="text_ranking">Ranking</string>
</resources>
